# reaDE

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  CLAUDE.md  DEVELOPMENT_PLAN.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configuration/templates/: db_config.example.yaml
docs/: reade_overview.puml
examples/: README.md  basic_config_loading.py  config_typed.py  db_typed.py  end_to_end.py
examples/config/: db.yaml  postgres.yaml  sqlite.yaml
examples/sample_configs/: app.json  db.yaml  settings.csv
src/reade/: __init__.py
src/reade/config/: __init__.py  env.py  factory.py  models.py  typed.py  utils.py
src/reade/config/loaders/: __init__.py  csv.py  json.py  yaml.py
src/reade/core/base/: __init__.py  connector.py  db_connector.py  factory.py  file_loader.py
src/reade/core/enums/: __init__.py  db_type.py  db_types.py  dq_dims.py  file_type.py  file_types.py
src/reade/core/errors/: __init__.py  base.py  config.py  data_io.py  db.py  dq.py  sql.py  validation.py
src/reade/core/interfaces/: __init__.py  config_loader.py  connector.py  db_connector.py  dq_validator.py  sql_executor.py
src/reade/core/models/: __init__.py  db_metadata.py  dq_results.py
src/reade/data_io/: __init__.py  execute.py  factory.py  utils.py
src/reade/data_io/readers/: __init__.py
src/reade/data_io/serializers/: __init__.py
src/reade/data_io/writers/: __init__.py
src/reade/db/: __init__.py  _retry.py  factory.py  sqlite.py
src/reade/db/connectors/: __init__.py  mysql.py  postgres.py  sqlite.py
src/reade/db/pools/: __init__.py
src/reade/dq/: __init__.py  factory.py  models.py  utils.py
src/reade/dq/dimensions/: __init__.py  volume.py
src/reade/sql/: __init__.py  models.py  render.py  utils.py
src/reade/sql/templates/: __init__.py
src/reade/sql/templates/custom/: __init__.py
src/reade/sql/templates/fragments/: __init__.py
src/reade/sql/templates/generic/: __init__.py  row_count.sql.j2
src/reade/validation/: __init__.py  factory.py  models.py  schema.py  types.py  utils.py
src/reade/validation/rules/: __init__.py  count.py
src/reade/validation/rules/custom/: __init__.py
src/reade/validation/rules/generic/: __init__.py  agg.py  count.py  delay.py  null.py
tests/: conftest.py
tests/contract/: __init__.py  test_config_loader.py  test_connection.py
tests/integration/: compose.yaml  test_connectors.py
tests/unit/: test_containment.py  test_public_api.py
tests/unit/config/: test_env.py  test_factory.py  test_models.py  test_typed.py  test_utils.py
tests/unit/config/loaders/: __init__.py  test_csv.py  test_json.py  test_yaml.py
tests/unit/data_io/: __init__.py  test_execute.py
tests/unit/db/: __init__.py  test_retry.py
tests/unit/db/connectors/: __init__.py  test_mysql.py  test_postgres.py  test_sqlite.py
tests/unit/dq/: __init__.py  test_volume.py
tests/unit/sql/: __init__.py  test_render.py
tests/unit/validation/: test_count.py
