[project]
name = "reade"
version = "0.1.0"
description = "Lightweight data-engineering toolkit (MVP: core DB types)."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Jeffrey Li", email = "agiwar791005@gmail.com" }]
keywords = ["data-engineering", "python-foundation", "de-sdk"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest",
    "pytest-cov",

    # Linting & formatting
    "ruff",
    "mypy",
    "bandit[toml]",

    # Type stubs
    "types-PyYAML",

    # Pre-commit
    "pre-commit",
]

[project.urls]
Homepage = "https://github.com/Agiwar/reaDE"
Repository = "https://github.com/Agiwar/reaDE"
Issues = "https://github.com/Agiwar/reaDE/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reade"]

[tool.hatch.build.targets.sdist]
include = ["src/reade"]

# ==================== RUFF ====================
[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "D", "UP",
    "ANN", "TC", "S", "B", "A", "C4",
    "T10", "ISC", "PIE", "T20", "PT",
    "Q", "RET", "SIM", "ARG", "PTH",
    "PL", "C90", "TRY", "EM", "PERF",
    "RUF",
]
ignore = [
    "D203", "D213",
    "ANN401", "TRY003", "EM101", "EM102",
    "PLR0913", "PLR2004",
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106", "ARG", "D", "ANN"]
"__init__.py" = ["D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["reade"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ==================== MYPY ====================
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
pretty = true
show_error_codes = true
plugins = ["pydantic.mypy"]
enable_incomplete_feature = ["NewGenericSyntax"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false


# ==================== PYTEST ====================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
addopts = ["-ra", "--strict-markers"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]


# ==================== BANDIT ====================
[tool.bandit]
exclude_dirs = ["tests", "build", "dist", ".venv", ".pyvenv*"]
skips = ["B101"]
