[project]
name = "reade"
version = "0.1.0a1"
description = "Lightweight data-engineering toolkit (MVP: core DB types)."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Jeffrey Li", email = "agiwar791005@gmail.com" }]
keywords = ["data-engineering", "python-foundation", "de-sdk"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "jinja2>=3.1",
    "pydantic>=2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.2"]
mysql = ["pymysql>=1.1"]
all = ["psycopg[binary]>=3.2", "pymysql>=1.1"]
dev = [
    # Testing
    "pytest",
    "pytest-cov",

    # Drivers (typing + integration tests; users install via extras)
    "psycopg[binary]>=3.2",
    "pymysql>=1.1",

    # Linting & formatting
    "ruff",
    "mypy",
    "types-pyyaml",
    "types-pymysql",
    "bandit[toml]",

    # Pre-commit
    "pre-commit",
]

[project.urls]
Homepage = "https://github.com/Agiwar/reaDE"
Repository = "https://github.com/Agiwar/reaDE"
Issues = "https://github.com/Agiwar/reaDE/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reade"]

[tool.hatch.build.targets.sdist]
include = ["src/reade"]

# ==================== RUFF ====================
[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "D", "UP",
    "ANN", "TC", "S", "B", "A", "C4",
    "T10", "ISC", "PIE", "T20", "PT",
    "Q", "RET", "SIM", "ARG", "PTH",
    "PL", "C90", "TRY", "EM", "PERF",
    "RUF",
]
ignore = [
    "D203", "D213",
    "ANN401", "TRY003", "EM101", "EM102",
    "PLR0913", "PLR2004",
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106", "ARG", "D", "ANN"]
"examples/**/*.py" = ["T20"]
"__init__.py" = ["D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["reade"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ==================== MYPY ====================
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
pretty = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false


# ==================== PYTEST ====================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-ra", "--strict-markers"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]


# ==================== BANDIT ====================
[tool.bandit]
exclude_dirs = ["tests", "build", "dist", ".venv", ".pyvenv*"]
skips = ["B101"]
